clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00015.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00015.c" (c, x86_64-unknown-linux-gnu)
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s32i[2], "arr", align 4
        %2 = const 0 : s32i
        store %2, %0
        %3 = const 1 : s32i
        %4 = const 0 : s64i
        get_element
        store %3, %5, align 4
        %6 = const 2 : s32i
        %7 = const 1 : s64i
        get_element
        store %6, %8, align 4
        %9 = const 0 : s64i
        get_element
        %11 = load %10 : s32i, align 4
        %12 = const 1 : s64i
        get_element
        %14 = load %13 : s32i, align 4
        %15 = add %11, %14 : s32i [nsw]
        %16 = const 3 : s32i
        sub
        store %17, %0
        %18 = load %0 : s32i
        return %18
}
