clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00016.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00016.c" (c, x86_64-unknown-linux-gnu)
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i[2], "arr", align 4
    %2 = alloca s32i*, "p", align 8
    %3 = const 0 : s32i
    store %3, %0
    %4 = const 1 : s64i
    %5 = get_element %1[%4] : s32i*
    store %5, %2, align 8
    %6 = const 0 : s32i
    %7 = load %2 : s32i*, align 8
    store %6, %7, align 4
    %8 = const 1 : s64i
    %9 = get_element %1[%8] : s32i*
    %10 = load %9 : s32i, align 4
    store %10, %0
    %11 = load %0 : s32i
    return %11
}
