clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00018.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00018.c" (c, x86_64-unknown-linux-gnu)
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca rec_S, "s", align 4
        %2 = alloca rec_S*, "p", align 8
        %3 = const 0 : s32i
        store %3, %0
        store %1, %2, align 8
        %4 = const 1 : s32i
        get_member
        store %4, %5, align 4
        %6 = const 2 : s32i
        %7 = load %2 : rec_S*, align 8
        get_member
        store %6, %8, align 4
        %9 = load %2 : rec_S*, align 8
        get_member
        %11 = load %10 : s32i, align 4
        %12 = load %2 : rec_S*, align 8
        get_member
        %14 = load %13 : s32i, align 4
        %15 = add %11, %14 : s32i [nsw]
        %16 = const 3 : s32i
        sub
        store %17, %0
        %18 = load %0 : s32i
        return %18
}
