clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00020.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00020.c" (c, x86_64-unknown-linux-gnu)
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s32i, "x", align 4
        %2 = alloca s32i*, "p", align 8
        %3 = alloca s32i**, "pp", align 8
        %4 = const 0 : s32i
        store %4, %0
        %5 = const 0 : s32i
        store %5, %1, align 4
        store %1, %2, align 8
        store %2, %3, align 8
        %6 = load %3 : s32i**, align 8
        %7 = load %6 : s32i*, align 8
        %8 = load %7 : s32i, align 4
        store %8, %0
        %9 = load %0 : s32i
        return %9
}
