clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00021.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00021.c" (c, x86_64-unknown-linux-gnu)
fn foo(%arg0: s32i, %arg1: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: s32i):
        %6 = alloca s32i, "a", align 4
        %7 = alloca s32i, "b", align 4
        %8 = alloca s32i, "__retval", align 4
        store %arg0, %6
        store %arg1, %7
        %9 = const 2 : s32i
        %10 = load %6 : s32i, align 4
        %11 = add %9, %10 : s32i [nsw]
        %12 = load %7 : s32i, align 4
        sub
        store %13, %8
        %14 = load %8 : s32i
        return %14
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        %2 = const 1 : s32i
        %3 = const 3 : s32i
        %4 = call @foo(%2, %3) : s32i [all]
        store %4, %0
        %5 = load %0 : s32i
        return %5
}
