clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00024.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00024.c" (c, x86_64-unknown-linux-gnu)
global v : rec_s = Zero { ty: Named("rec_s") } [external, default, align 4, dso_local]

fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        %2 = const 1 : s32i
        %3 = get_global @v : rec_s*
        get_member
        store %2, %4, align 4
        %5 = const 2 : s32i
        %6 = get_global @v : rec_s*
        get_member
        store %5, %7, align 4
        %8 = const 3 : s32i
        %9 = get_global @v : rec_s*
        get_member
        %11 = load %10 : s32i, align 4
        sub
        %13 = get_global @v : rec_s*
        get_member
        %15 = load %14 : s32i, align 4
        sub
        store %16, %0
        %17 = load %0 : s32i
        return %17
}
